fix: update placeholder colour
a shade too light for a11y

--- a/assets/stylesheets/bootstrap/_variables.scss
+++ b/assets/stylesheets/bootstrap/_variables.scss
@@ -243,7 +243,7 @@ $input-border-radius-small:      $border-radius-small !default;
 $input-border-focus:             $brand-primary !default;
 
 //** Placeholder text color
-$input-color-placeholder:        $gray600 !default;
+$input-color-placeholder:        $gray700 !default;
 
 //** Default `.form-control` height
 $input-height-base:              ($line-height-computed + ($padding-base-vertical * 2) + 2) !default;
